Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35331

KV bucket flusher can lose a state transition

    XMLWordPrintable

Details

    • Triaged
    • Unknown
    • KV-Engine MH 2nd Beta

    Description

      As seen during CV for http://review.couchbase.org/#/c/112635/ :

      08:50:44 Running [0041/0047]: warmup_mb21769 (couchstore).../home/couchbase/jenkins/workspace/kv_engine-linux-master/kv_engine/engines/ep/tests/ep_testsuite_basic.cc:1877 Test failed: `' (Expected `10', got `0' - failover table entry 0 is incorrect vb:2)
      08:50:44 (40 ms) FAIL
      

      Full log: http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/21376/consoleFull#1446839460c5751633-7aa5-473a-91e8-426e0afa5a7b

      Attachments

        Issue Links

          Activity

            People

              drigby Dave Rigby (Inactive)
              drigby Dave Rigby (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty