MB-35331: Increment flusher_todo for set_vbucket_state

Ensure wait_for_flusher_to_settle waits for a set_vbucket_state
by increasing the flusher_todo, which will be cleared once
the flusher has committed its batch.

Commit also includes further debug for warmup_mb21769 test as
that still fails, even with the flusher_todo increment

Change-Id: Ib78ecc0f02da95a6aee3c9031bf445c7a11d365a
Reviewed-on: http://review.couchbase.org/113616
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>